Closed Bug 1277473 Opened 9 years ago Closed 9 years ago

Data race in accessing gDumpedAudioCount from OpenDumpFile()

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

https://hg.mozilla.org/mozilla-central/file/4d63dde701b47b8661ab7990f197b6b60e543839/dom/media/AudioStream.cpp#l250 It is a data race to share gDumpedAudioCount among threads without synchronization. Chances are there are file name collisions when opening dump files by different AudioStream instances.
Assignee: nobody → jwwang
Blocks: 1274160
Attachment #8760140 - Flags: review?(kinetik) → review+
Thanks!
Pushed by jwwang@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/b093026fc747 fix data race in gDumpedAudioCount. r=kinetik.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: