Bug 1277473 - fix data race in gDumpedAudioCount. r=kinetik.

MozReview-Commit-ID: F9Twn0MlDBV

--HG--
extra : rebase_source : aaab07dbdb236ced54e01d0ce26692b2479d355b